--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <head>
+    <link rel="stylesheet" type="text/css" href="/style.css">
     <title>Google</title>
 </head>
 <body>
     <div id="header-leftside">
         <a href="https://about.google/?fg=1&amp;utm_source=google-US&amp;utm_medium=referral&amp;utm_campaign=hp-header">About</a>
         <a href="https://store.google.com/US/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a>
-    </div id="header-rightside">   
+    </div>
+    <div id="header-rightside">   
         <a href="https://mail.google.com/mail/?tab=wm&amp;ogbl">Gmail</a>
         <a href="https://www.google.com/imghp?hl=en&amp;tab=wi&amp;ogbl">Images</a>
         <a class="gb_D gb_zc" href="https://www.google.com/intl/en/about/products?tab=wh" title="Google apps" aria-expanded="false" role="button" tabindex="0"></a>
