--- a/index.html
+++ b/index.html
@@ -14,5 +14,17 @@
         <a href="https://www.google.com/intl/en/about/products?tab=wh">[space for button]</a>
         <a href="https://accounts.google.com/ServiceLogin?hl=en&amp;passive=true&amp;continue=https://www.google.com/">Sign in</a>
     </div>
+    <div id="main"  class="content">
+        <img alt="Google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+    </div>
+    <div id="searchform">
+        <form action="/search" data-submitfalse="q" method="GET" name="f" role="search">
+            <div id="tophf"><input name="source" type="hidden" value="hp"><input value="QWUTX5G0KqWyggewnrfwDQ" name="ei" type="hidden"><input value="AINFCbYAAAAAXxNzUXPUPViwnpn1Hq5HEQnElQlqfJcN" disabled="true" name="iflsig" type="hidden"></div>
+                
+        <span>
+            <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path></svg>
+        </span> 
+    </div>
+
 </body>
 
