updated html and css files

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="https://www.google.com/imghp?hl=en&amp;tab=wi&amp;ogbl">Images</a>
             </span>
             <span class="apps-section">
-                <a href="https://www.google.com/intl/en/about/products?tab=wh">[space for button]</a>
+                <a href="https://www.google.com/intl/en/about/products?tab=wh" title="Google apps" aria-expanded="false" role="button" tabindex="0"></a>
             </span>
             <span class="sign-in-button">
                 <form>
