updated both css and html file

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         <img alt="Google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
     </div>
     <!-- Search Form Box -->
-          
+    <form action="http://www.google.com/search" method="get" id="search">
+        <input type="text" name="q"/>
+    </form>
       
     <!-- Magnifying Glass -->
     <div>       
