updated css and html file

--- a/index.html
+++ b/index.html
@@ -5,33 +5,17 @@
 </head>
 <body>
     <!-- Left Side --> 
-    <header>
-        <div id="left-side-header">
-            <span class="about-section">
-                <a href="https://about.google/?fg=1&amp;utm_source=google-US&amp;utm_medium=referral&amp;utm_campaign=hp-header">About</a>
-            </span>
-            <span class="store-section">
-                <a href="https://store.google.com/US/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a>
-            </span>
-        </div>
+        <ul class="left-side-header">
+            <li><a href="https://about.google/?fg=1&amp;utm_source=google-US&amp;utm_medium=referral&amp;utm_campaign=hp-header">About </a></li>
+            <li><a href="https://store.google.com/US/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store </a></li>
+        </ul>
      <!-- Right Side --> 
-        <div id="right-side-header">
-            <span class="mail-section">   
-                <a href="https://mail.google.com/mail/?tab=wm&amp;ogbl">Gmail</a>
-            </span>
-            <span class="image-section">
-                <a href="https://www.google.com/imghp?hl=en&amp;tab=wi&amp;ogbl">Images</a>
-            </span>
-            <span class="apps-section">
-                <a href="https://www.google.com/intl/en/about/products?tab=wh" title="Google apps" aria-expanded="false" role="button" tabindex="0"></a>
-            </span>
-            <span class="sign-in-button">
-                <form>
-                    <input type="submit" value="Sign In">
-                </form>
-            </span>
-        </div>
-    </header>
+        <ul class="right-side-header">
+            <li><a href="https://mail.google.com/mail/?tab=wm&amp;ogbl">Gmail </a></li>
+            <li><a href="https://www.google.com/imghp?hl=en&amp;tab=wi&amp;ogbl">Images </a></li>
+            <li><a href="https://www.google.com/intl/en/about/products?tab=wh" title="Google apps" aria-expanded="false" role="button" tabindex="0"></a> </li>
+            <li class="sign-in-button">Sign In </li>
+        </ul>
     <!-- Google Logo -->
     <div id="main"  class="content">
         <img alt="Google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
@@ -50,5 +34,14 @@
 
 </body>
 <footer>
-
+    <ul class="left-side-footer">
+        <li><a href="https://www.google.com/intl/en_us/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&amp;utm_source=google.com&amp;utm_medium=referral&amp;utm_campaign=google_hpafooter&amp;fg=1">Advertising </a></li>
+        <li><a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&amp;utm_source=google.com&amp;utm_medium=referral&amp;utm_campaign=google_hpbfooter&amp;fg=1">Business </a></li>
+        <li><a href="https://google.com/search/howsearchworks/?fg=1">  How Search works </a></li>
+    </ul>
+    <ul class="right-side-footer">
+        <li><a href="https://policies.google.com/privacy?hl=en&amp;fg=1">Privacy</a></li>
+        <li><a href="https://policies.google.com/terms?hl=en&amp;fg=1">Terms</a></li>
+        <li><a href="https://www.google.com/preferences?hl=en">Settings</a></li>
+    </ul>
 </footer>
