--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 </body>
 <footer>
     <ul class="left-side-footer">
-        <li><a href="https://www.google.com/intl/en_us/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&amp;utm_source=google.com&amp;utm_medium=referral&amp;utm_campaign=google_hpafooter&amp;fg=1">Advertising </a></li>
-        <li><a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&amp;utm_source=google.com&amp;utm_medium=referral&amp;utm_campaign=google_hpbfooter&amp;fg=1">Business </a></li>
-        <li><a href="https://google.com/search/howsearchworks/?fg=1">  How Search works </a></li>
+        <li><a class="footer" href="https://www.google.com/intl/en_us/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&amp;utm_source=google.com&amp;utm_medium=referral&amp;utm_campaign=google_hpafooter&amp;fg=1">Advertising </a></li>
+        <li><a class="footer" href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&amp;utm_source=google.com&amp;utm_medium=referral&amp;utm_campaign=google_hpbfooter&amp;fg=1">Business </a></li>
+        <li><a class="footer" href="https://google.com/search/howsearchworks/?fg=1">  How Search works </a></li>
     </ul>
     <ul class="right-side-footer">
-        <li><a href="https://policies.google.com/privacy?hl=en&amp;fg=1">Privacy</a></li>
-        <li><a href="https://policies.google.com/terms?hl=en&amp;fg=1">Terms</a></li>
-        <li><a href="https://www.google.com/preferences?hl=en">Settings</a></li>
+        <li><a class="footer" href="https://policies.google.com/privacy?hl=en&amp;fg=1">Privacy</a></li>
+        <li><a class="footer" href="https://policies.google.com/terms?hl=en&amp;fg=1">Terms</a></li>
+        <li><a class="footer" href="https://www.google.com/preferences?hl=en">Settings</a></li>
     </ul>
 </footer>
