updated header and logo spacing/position

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul class="right-side-header">
             <li><a href="https://mail.google.com/mail/?tab=wm&amp;ogbl">Gmail </a></li>
             <li><a href="https://www.google.com/imghp?hl=en&amp;tab=wi&amp;ogbl">Images </a></li>
-            <li><a href="https://www.google.com/intl/en/about/products?tab=wh" title="Google apps" aria-expanded="false" role="button" tabindex="0"></a> </li>
+            <li class="apps-button"><a href="https://www.google.com/intl/en/about/products?tab=wh" title="Google apps" aria-expanded="false" role="button" tabindex="0"></a> </li>
             <li class="sign-in-button">Sign In </li>
         </ul>
     <!-- Google Logo -->
