--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
     </div>
     <!-- Search Form Box -->
     <div class="search-box">
-        <form action="http://www.google.com/search" method="get" id="search">
-            <input type="text" name="q"/>
-        </form>
     </div>
 
     <!-- Magnifying Glass -->    
@@ -32,7 +29,11 @@
     
     <!-- Voice Search -->
         <svg class="voice-search" focusable="false" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m12 15c1.66 0 3-1.31 3-2.97v-7.02c0-1.66-1.34-3.01-3-3.01s-3 1.34-3 3.01v7.02c0 1.66 1.34 2.97 3 2.97z" fill="#4285f4"></path><path d="m11 18.08h2v3.92h-2z" fill="#34a853"></path><path d="m7.05 16.87c-1.27-1.33-2.05-2.83-2.05-4.87h2c0 1.45 0.56 2.42 1.47 3.38v0.32l-1.15 1.18z" fill="#f4b400"></path><path d="m12 16.93a4.97 5.25 0 0 1 -3.54 -1.55l-1.41 1.49c1.26 1.34 3.02 2.13 4.95 2.13 3.87 0 6.99-2.92 6.99-7h-1.99c0 2.92-2.24 4.93-5 4.93z" fill="#ea4335"></path></svg>
-   
+
+   <div class="button-boxes"> 
+    <input class="button1" value="Google Search" aria-label="Google Search" name="btnK" type="submit" data-ved="0ahUKEwi0teyby6LrAhUC-6wKHeyCDjkQ4dUDCA0">
+    <input class="button2" value="I'm Feeling Lucky" aria-label="I'm Feeling Lucky" id="gbqfbb" name="btnI" type="submit" data-ved="0ahUKEwi0teyby6LrAhUC-6wKHeyCDjkQnRsIDg" style="visibility: inherit;">
+    </div>
 
 </body>
 <footer>
